Added notice and styles

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,3 +8,9 @@ body{
     background: -webkit-linear-gradient(to left, #1CD8D2 , #93EDC7);
     background: linear-gradient(to left, #1CD8D2 , #93EDC7);
 }
+
+.alert-notice {
+  color: #8a6d3b;
+  background-color: #fcf8e3;
+  border-color: #faebcc;
+}
