--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dev Match</title>
+  <title>Mark</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag "https://js.stripe.com/v2/", type: 'text/javascript' %>
   <%= javascript_include_tag 'application' %>
@@ -20,7 +20,7 @@
       </button>
       <%= link_to root_path, class: 'navbar-brand' do %>
         <i class="fa fa-users"></i>
-        Dev Match
+        Mark
       <% end %>
     </div>
     <div class="collapse navbar-collapse" id="main-nav-collapse">
@@ -33,7 +33,7 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
-          <li><%= link_to "Community", users_path %></li>
+          <li><%= link_to "Developers", users_path %></li>
           <li><%= link_to "My Account", edit_user_registration_path %></li>
         <% end %>
         <li><%= link_to "About", about_path %></li>
@@ -43,13 +43,13 @@
   </div>
 </nav>
   
+ 
+  
 <div class="container">
-  <% flash.each do |key, value| %>
-    <%= content_tag :div, value, class: "alert alert-#{key}" %>
-  <% end %>
+   <%= render 'layouts/messages' %>
   
   <%= yield %>
 </div>
-  
+  <%= render 'layouts/footer' %>
 </body>
 </html>
