--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
-  <h1>Welcome to Dev Match</h1>
-  <h3>A membership site where entrepreneurs can meet developers.</h3>
+  <h1>Welcome to Mark</h1>
+  <h3>Made your Analysis Easy by using simple clicks.</h3>
 </div>
 <div class="row">
   <% if user_signed_in? %>
@@ -16,13 +16,15 @@
         <% end %>
       </div>
     </div>
+    <% if user_signed_in? %>
     <div class="col-md-6">
       <div class="well">
-        <h2 class="text-center">The Community</h2>
-        <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
-        <%= link_to "Visit the community", users_path, class: 'btn btn-default btn-lg btn-block' %>
+        <h2 class="text-center">Analyse Now</h2>
+        <p>Begin your analysis on your specific information</p>
+        <%= link_to "Analyse", user_analysis_index_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
       </div>
     </div>
+    <% end %>
   <% else %>
     <div class="col-md-6">
       <div class="well">
