--- a/app/views/postaggers/index.html.erb
+++ b/app/views/postaggers/index.html.erb
@@ -42,7 +42,8 @@
       <%= link_to "Classification", classificationzs_path(current_user), class:"list-group-item" %>
       <%= link_to "Concept Extraction", conceptextracts_path(current_user), class:"list-group-item" %>
       <%= link_to "Summarization", summarizationzs_path(current_user), class:"list-group-item" %>
-      <%= link_to "Summarization", articlextracts_path(current_user), class:"list-group-item" %>
+      <%= link_to "Article Extraction", articlextracts_path(current_user), class:"list-group-item" %>
+      <%= link_to "Hashtag Suggestion", hashtaggings_path(current_user), class:"list-group-item" %>
       <% end %>
     </div>
   </div>
