--- a/app/views/semantings/index.html.erb
+++ b/app/views/semantings/index.html.erb
@@ -1,25 +1,27 @@
 <div class="row">
-  <h1 class="text-center">Enter your Text for NLTK Stemming</h1>
+  <h1 class="text-center">Enter your Url,Class for Semantic Labeling</h1>
   <div class="col-md-9 col-md-push-3">
-       <h2 class="text-center">Stemmer</h2>
-       <h3 class="text-center">Stemmers remove morphological affixes from words, leaving only the word stem</h3>
+       <h2 class="text-center">Semantic Labeling</h2>
+       <h4 class="text-center">Tells the semantics of  class label or tag for a text or URL.</h4>
           <div class="well">
-            <%= form_for @stemmer do |f| %>
+            <%= form_for @semanting do |f| %>
               <div class="form-group">
                 <%= f.label :'Enter here' %>
                 <%= f.text_area :content, class: 'form-control' %>
+                <%= f.label :'Enter here class label you want to find semantics for in Url or Text' %>
+                <%= f.text_area :content1, class: 'form-control' %>
               </div>
               <%= f.submit 'Analyze', class: 'btn btn-default' %>
             <% end %>
           </div>
           
-        <h1 class="text-center">Your Result</h1>
+        <h1 class="text-center">Your result</h1>
             <div class="well">
-              <% if @result %>
-                      <p><%= @result %></p>
+              <% if @return %>
+                 <p><%= @return %></p>
               <% end %>
             </div>
-    
+        
   </div>         
   
   <div class="col-md-3 col-md-pull-9">
@@ -31,7 +33,7 @@
       <%= link_to "Named Entity", entityrecognizers_path(current_user), class:"list-group-item" %>
       <%= link_to "Pos Tagging", postaggers_path(current_user), class:"list-group-item" %>
       <%= link_to "Spell Checker", spellcheckings_path(current_user), class:"list-group-item" %>
-      <% if current_user.plan_id == 1 %>
+      <% if current_user.plan_id == 2 %>
       <%= link_to "Noun Phrase Extraction", nounphrasesextractions_path(current_user), class:"list-group-item" %>
       <%= link_to "Stemmer",stemmers_path(current_user), class:"list-group-item" %>
       <%= link_to "Language Detection", languagezzzs_path(current_user), class:"list-group-item" %>
@@ -41,6 +43,7 @@
       <%= link_to "Summarization", summarizationzs_path(current_user), class:"list-group-item" %>
       <%= link_to "Article Extraction", articlextracts_path(current_user), class:"list-group-item" %>
       <%= link_to "Hashtag Suggestion", hashtaggings_path(current_user), class:"list-group-item" %>
+      <%= link_to "Semantic Labeling", semantings_path(current_user), class:"list-group-item" %>
       <% end %>
     </div>
   </div>
