--- a/app/views/articlextracts/index.html.erb
+++ b/app/views/articlextracts/index.html.erb
@@ -56,6 +56,7 @@
       <%= link_to "Concept Extraction", conceptextracts_path(current_user), class:"list-group-item" %>
       <%= link_to "Summarization", summarizationzs_path(current_user), class:"list-group-item" %>
       <%= link_to "Article Extraction", articlextracts_path(current_user), class:"list-group-item" %>
+      <%= link_to "Hashtag Suggestion", hashtaggings_path(current_user), class:"list-group-item" %>
       <% end %>
     </div>
   </div>
