--- a/app/views/entityrecognizers/index.html.erb
+++ b/app/views/entityrecognizers/index.html.erb
@@ -42,7 +42,9 @@
       <%= link_to "Lemmatizer", lemmatizzers_path(current_user), class:"list-group-item" %>
       <%= link_to "Classification", classificationzs_path(current_user), class:"list-group-item" %>
       <%= link_to "Concept Extraction", conceptextracts_path(current_user), class:"list-group-item" %>
-      <%= link_to "Part-of-Speech", "#", class:"list-group-item" %>
+      <%= link_to "Summarization", summarizationzs_path(current_user), class:"list-group-item" %>
+      <%= link_to "Article Extraction", articlextracts_path(current_user), class:"list-group-item" %>
+      <%= link_to "Hashtag Suggestion", hashtaggings_path(current_user), class:"list-group-item" %>
       <% end %>
     </div>
   </div>
