--- a/app/views/sentiments/index.html.erb
+++ b/app/views/sentiments/index.html.erb
@@ -16,16 +16,16 @@
         <h1 class="text-center">Your result</h1>
             <div class="well">
               <% if @type %>
-                 <p>Type : <%= @type %></p>
+                 <p><b>Type:</b> <%= @type %></p>
               <% end %>
               <% if @neg %>
-                <p>Nevativity : <%= @neg %></p>
+                <p><b>Nevativity:</b> <%= @neg %></p>
               <% end %>
               <% if @neu %>
-                 <p>Neutrality : <%= @neu %></p>
+                 <p><b>Neutrality:</b> <%= @neu %></p>
               <% end %>
               <% if @pos %>
-                 <p>Positivity: <%= @pos %></p>
+                 <p><b>Positivity:</b> <%= @pos %></p>
               <% end %>
             </div>
         
@@ -37,7 +37,7 @@
    <h2 class="text-center">Select your type</h2>
     <div class="list-group">
       <%= link_to "Sentiment Analysis", sentiments_path(current_user), class:"list-group-item" %>
-      <%= link_to "Article Extraction", entityrecognizers_path(current_user), class:"list-group-item" %>
+      <%= link_to "Named Entity Recognition", entityrecognizers_path(current_user), class:"list-group-item" %>
       <%= link_to "Pos Tagging", postaggers_path(current_user), class:"list-group-item" %>
       <%= link_to "Spell Checker", spellcheckings_path(current_user), class:"list-group-item" %>
       <% if current_user.plan_id == 2 %>
