--- a/app/views/articlextracts/index.html.erb
+++ b/app/views/articlextracts/index.html.erb
@@ -2,7 +2,7 @@
   <h1 class="text-center">Enter your Url for Article Extraction</h1>
   <div class="col-md-9 col-md-push-3">
        <h2 class="text-center">Article Extraction</h2>
-       <h4 class="text-center">Extracts the main text of article and also extracts feeds and embedded media such as images & videos</h4>
+       <h4 class="text-center">Extracts the Content of article and also extracts feeds and embedded media such as images & videos</h4>
           <div class="well">
             <%= form_for @articlextract do |f| %>
               <div class="form-group">
@@ -16,13 +16,13 @@
         <h1 class="text-center">Your result</h1>
             <div class="well">
               <% if @author %>
-                 <p><b>Author : </b><%= @author %></p>
+                 <p><b>Author: </b><%= @author %></p>
               <% end %>
               <% if @title %>
-                <p><b>Title : </b><%= @title %></p>
+                <p><b>Title: </b><%= @title %></p>
               <% end %>
               <% if @publishDate %>
-                 <p><b>Pubish Date : </b><%= @publishDate %></p>
+                 <p><b>Pubish Date: </b><%= @publishDate %></p>
               <% end %>
               <% if @videos %>
                  <p><b>Videos: </b><%= @videos.each { |a| %>
@@ -44,7 +44,7 @@
    <h2 class="text-center">Select your type</h2>
     <div class="list-group">
       <%= link_to "Sentiment Analysis", sentiments_path(current_user), class:"list-group-item" %>
-      <%= link_to "Article Extraction", entityrecognizers_path(current_user), class:"list-group-item" %>
+      <%= link_to "Named Entity Recognition", entityrecognizers_path(current_user), class:"list-group-item" %>
       <%= link_to "Pos Tagging", postaggers_path(current_user), class:"list-group-item" %>
       <%= link_to "Spell Checker", spellcheckings_path(current_user), class:"list-group-item" %>
       <% if current_user.plan_id == 2 %>
