--- a/app/views/hashtaggings/index.html.erb
+++ b/app/views/hashtaggings/index.html.erb
@@ -28,7 +28,7 @@
    <h2 class="text-center">Select your type</h2>
     <div class="list-group">
       <%= link_to "Sentiment Analysis", sentiments_path(current_user), class:"list-group-item" %>
-      <%= link_to "Article Extraction", entityrecognizers_path(current_user), class:"list-group-item" %>
+      <%= link_to "Named Entity Recognition", entityrecognizers_path(current_user), class:"list-group-item" %>
       <%= link_to "Pos Tagging", postaggers_path(current_user), class:"list-group-item" %>
       <%= link_to "Spell Checker", spellcheckings_path(current_user), class:"list-group-item" %>
       <% if current_user.plan_id == 2 %>
