--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron text-center">
   <h1>Welcome to Mark</h1>
-  <h3>Made your Analysis Easy by using simple clicks.</h3>
+  <h3>Where your analysis is made easy.</h3>
 </div>
 <div class="row">
   <% if user_signed_in? %>
@@ -11,7 +11,7 @@
           <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
           <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
         <% else %>
-          <p>Create your profile so that you can share your information with the community.</p>
+          <p>Create your profile so that you can share your information with the Developers.</p>
           <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block'%>
         <% end %>
       </div>
@@ -20,7 +20,7 @@
     <div class="col-md-6">
       <div class="well">
         <h2 class="text-center">Analyse Now</h2>
-        <p>Begin your analysis on your specific information</p>
+        <p>Begin your Quick analysis on your specific information</p>
         <%= link_to "Analyse", user_analysis_index_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
       </div>
     </div>
