--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <span class="icon-bar"></span>
       </button>
       <%= link_to root_path, class: 'navbar-brand' do %>
-        <i class="fa fa-users"></i>
+        <i class="fa fa-eye" aria-hidden="true"></i>
         Mark
       <% end %>
     </div>
